--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -41,6 +41,17 @@
 		<url-pattern>/</url-pattern>
 	</servlet-mapping>
 
+	<!-- 登录验证过滤器 -->
+	<filter>
+		<filter-name>accountFilter</filter-name>
+		<filter-class>com.xupt.zxh.graduation.project.filter.AccountFilter</filter-class>
+	</filter>
+	<filter-mapping>
+		<filter-name>accountFilter</filter-name>
+		<url-pattern>/*</url-pattern>
+	</filter-mapping>
+
+
 	<filter>
 		<filter-name>encodingFilter</filter-name>
 		<filter-class>org.springframework.web.filter.CharacterEncodingFilter</filter-class>
